--- a/css/styles.css
+++ b/css/styles.css
@@ -8,19 +8,44 @@ body {
 
 ul {
   list-style-type: none;
+    margin: 0;
+    padding: 0;
+   
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+.img {
+  display: block;
+}
+
 
 a {
   text-decoration: none;
 }
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
 
 .hero {
   background: #2e2f42;
+  width: 100%;
+  height: 600px;
 }
 
 .header-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .header-nav {
   display: flex;
@@ -30,22 +55,10 @@ a {
     display: flex;
     align-items: center;
     gap: 40px;
-  }
-  .contacts-list {
-    display: flex;
-      align-items: center;
-      gap: 40px;
-  }
-.hero-title {
-  font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #fff;
-}
-
+  } 
+  
 .futures-text {
+  padding-bottom: 120px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -84,6 +97,9 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  display: flex;
+    align-items: center;
+    gap: 40px;
 }
 
 .contacts-list:hover,
@@ -95,7 +111,31 @@ a {
   font-style: normal;
 }
 
+.title-container {
+  min-width: 120px;
+  margin: 0 auto;
+    padding: 0 15px;
+      justify-content: center;
+}
+.hero-title {
+  padding-top: 188px;
+  max-width: 496px;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+}
 .hero-btn {
+  display: block;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -105,7 +145,12 @@ a {
   cursor: pointer;
   justify-content: flex-start;
   background: #4d5ae5;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 48px;
+  border: none;
 }
+
 
 .hero-btn:hover,
 .hero-btn:focus {
@@ -128,12 +173,27 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
 }
+.futures-list {
+  padding-top: 120px;
+  display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 8px;
+    width: calc((100% - 24px) / 4)
+      height: 104px;
+}
 
 .futures-item {
   background-color: #ffffff;
 }
-
+.futures-item .container {
+      justify-content: space-between;
+        display: flex;
+        align-items: center;
+}
 .futures-sub {
+  padding-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -147,6 +207,11 @@ a {
 }
 
 .team-title {
+  padding-top: 120px;
+  padding-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -163,6 +228,8 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  padding-top: 32px;
+  padding-bottom: 8px;
 }
 
 .team-text {
@@ -172,6 +239,7 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  padding-bottom: 32px;
 }
 
 .team-item {
@@ -179,6 +247,10 @@ a {
 }
 
 .portfolio-our {
+  padding-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 120px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -187,8 +259,19 @@ a {
   color: #2e2f42;
   text-transform: capitalize;
 }
+.portfolio-list {
+  flex-wrap: wrap;
+  width: calc((100% - 24px) / 3)
+  background-color: #ffffff;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+    flex-direction: row;
+    padding-bottom: 120px;
+}
 
 .portfolio-title {
+  padding-top: 32px;
   text-transform: capitalize;
   font-weight: 500;
   font-size: 20px;
@@ -198,6 +281,8 @@ a {
 }
 
 .portfolio-text {
+  padding-top: 8px;
+  padding-bottom: 32px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -206,11 +291,15 @@ a {
 }
 
 .footer-text {
+  max-width: 264px;
+  padding-top: 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  display: flex;
+  flex-direction: row;
 }
 
 .footer-logo {
@@ -234,11 +323,24 @@ a {
 }
 
 .page-footer {
+  display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 0px;
   background: #2e2f42;
+  max-width: auto;
+    height: 312px;
 }
 
 .team-list {
+  width: calc((100% - 24px) / 4)
   background-color: #ffffff;
+  display: flex;
+  align-items: stretch;
+    justify-content:flex-start;
+    flex-direction: row;
+    padding-bottom: 120px;
 }
 .page-header {
   padding-top: 24px;
