--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,8 @@ body {
 
 ul {
   list-style-type: none;
-    margin: 0;
-    padding: 0;
-   
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -22,11 +21,11 @@ h6,
 p {
   margin: 0;
 }
+
 .img {
   display: block;
-}
-
-
+} 
+ 
 a {
   text-decoration: none;
 }
@@ -40,6 +39,7 @@ a {
   background: #2e2f42;
   width: 100%;
   height: 600px;
+  padding: 188px 0;
 }
 
 .header-container {
@@ -47,14 +47,16 @@ a {
   align-items: center;
   justify-content: space-between;
 }
+
 .header-nav {
   display: flex;
-    align-items: center;
+  align-items: center;
   }
+
   .header-menu-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+  display: flex;
+  align-items: center;
+  gap: 40px;
   } 
   
 .futures-text {
@@ -74,6 +76,7 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px
 }
 
 .logo-text {
@@ -98,8 +101,13 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   display: flex;
-    align-items: center;
-    gap: 40px;
+  align-items: center;
+  gap: 40px;
+}
+
+.contacts-item {
+  display: flex;
+  gap: 40px;
 }
 
 .contacts-list:hover,
@@ -111,11 +119,11 @@ a {
   font-style: normal;
 }
 
-.title-container {
+.container {
   min-width: 120px;
   margin: 0 auto;
-    padding: 0 15px;
-      justify-content: center;
+  padding: 0 15px;
+  justify-content: center;
 }
 .hero-title {
   padding-top: 188px;
@@ -173,42 +181,48 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
 }
+
+.futures {
+  padding: 120px 0;
+}
 .futures-list {
   padding-top: 120px;
   display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-    flex-direction: row;
-    gap: 8px;
-    width: calc((100% - 24px) / 4)
-      height: 104px;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 8px;
+  width calc((100% - 3 * 24px) / 4)
+  height: 104px;
 }
 
 .futures-item {
   background-color: #ffffff;
 }
-.futures-item .container {
-      justify-content: space-between;
-        display: flex;
-        align-items: center;
+.futures-item {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
-.futures-sub {
-  padding-bottom: 8px;
+.futures-sub { 
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team {
   background: #f4f4fd;
+  padding: 120px 0;
 }
 
 .team-title {
-  padding-top: 120px;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
+  padding-top: 120px; 
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -229,7 +243,7 @@ a {
   text-align: center;
   color: #2e2f42;
   padding-top: 32px;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .team-text {
@@ -244,10 +258,16 @@ a {
 
 .team-item {
   background-color: #ffffff;
+  width: calc((100% - 24px) / 4)
+}
+
+.portfolio-first {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .portfolio-our {
-  padding-bottom: 72px;
+  margin-bottom: 72px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 120px;
@@ -260,14 +280,19 @@ a {
   text-transform: capitalize;
 }
 .portfolio-list {
+  display: flex;
+  width: calc((100% - 48px) / 3);
+  column-gap: 24px;
+  row-gap: 48px;
+  margin: 0 auto;
   flex-wrap: wrap;
   width: calc((100% - 24px) / 3)
   background-color: #ffffff;
-    display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-    flex-direction: row;
-    padding-bottom: 120px;
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-direction: row;
+  padding-bottom: 120px;
 }
 
 .portfolio-title {
@@ -303,6 +328,8 @@ a {
 }
 
 .footer-logo {
+  margin-bottom: 16px;
+  display: inline-block;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -323,26 +350,31 @@ a {
 }
 
 .page-footer {
+  padding: 100px 0;
   display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: 0px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 0px;
   background: #2e2f42;
   max-width: auto;
-    height: 312px;
+  height: 312px;
 }
 
 .team-list {
-  width: calc((100% - 24px) / 4)
+  border-radius: 0px 0px 4px 4px;
+  gap: 24px;
+  width: calc((100% - 3 * 24px) / 4);
   background-color: #ffffff;
+  flex-direction: row;
+  padding-bottom: 120px;
   display: flex;
-  align-items: stretch;
-    justify-content:flex-start;
-    flex-direction: row;
-    padding-bottom: 120px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .page-header {
   padding-top: 24px;
   padding-bottom: 24px;
+  border-bottom: 1px solid #e7e9fc;
+  padding: 24px 0;
 }
